--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "css:build": "postcss src/tailwind.css -o public/css/tailwind.css"
+    "css:build": "postcss tailwindcss/main.css -o public/css/main.css",
+    "db:build": "echo \"need to put sql db inititiation file here\"",
+    "server": "nodemon app.js 3000"
   },
   "keywords": [],
   "author": "",
