added hover effect to display X for deleting line item, hover effect is disabled for touch devices using no-hover from plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,8 @@
         "**/*.sass",
         "**/*.ts",
         "**/*.json"
-    ]
+    ],
+    "editor.quickSuggestions": {
+        "strings": true
+      }
 }
