--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "css:build": "postcss tailwindcss/main.css -o public/css/main.css",
+    "css:build": "postcss src/tailwind.css -o public/css/tailwind.css",
     "db:build": "echo \"need to put sql db inititiation file here\"",
     "server": "nodemon app.js 3000"
   },
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "pg-promise": "^10.9.0",
     "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "tailwindcss-interaction-variants": "^5.0.0"
   }
 }
